k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mizan
  labels:
    app.kubernetes.io/part-of: mizan
